[gd_scene load_steps=19 format=3 uid="uid://deq8lpe4xpcf8"]

[ext_resource type="Script" uid="uid://dsss6yqmiy2nm" path="res://scripts/worker.gd" id="1_4n0ys"]
[ext_resource type="Texture2D" uid="uid://61mft3dskkyd" path="res://sprites/Death1.png" id="2_cmug3"]
[ext_resource type="Texture2D" uid="uid://i4hunsjweop2" path="res://sprites/Face1.png" id="2_sb737"]
[ext_resource type="Texture2D" uid="uid://budkth2xsf2ve" path="res://sprites/Death2.png" id="3_b78ny"]
[ext_resource type="Texture2D" uid="uid://cl7n4updmcfdr" path="res://sprites/Face2.png" id="3_leqb2"]
[ext_resource type="Script" uid="uid://ca7ydo2q4rxfg" path="res://scripts/worker_particles.gd" id="3_sb737"]
[ext_resource type="Texture2D" uid="uid://bhsiw4yhoku81" path="res://sprites/Death3.png" id="4_7j7r4"]
[ext_resource type="Texture2D" uid="uid://5g3tkpsk6b4v" path="res://sprites/Face3.png" id="4_ec5k7"]
[ext_resource type="AudioStream" uid="uid://68rktfmcvx6v" path="res://sounds/LATE late cut pow fah.wav" id="6_ec5k7"]
[ext_resource type="AudioStream" uid="uid://ch3y8wcab2wcj" path="res://sounds/Point.wav" id="10_b78ny"]
[ext_resource type="Texture2D" uid="uid://5qtuqad6tbbn" path="res://sprites/NearMiss.png" id="12_wuga2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p56th"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cmug3")
}, {
"duration": 1.0,
"texture": ExtResource("2_cmug3")
}, {
"duration": 1.0,
"texture": ExtResource("3_b78ny")
}, {
"duration": 1.0,
"texture": ExtResource("4_7j7r4")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sb737")
}, {
"duration": 1.0,
"texture": ExtResource("2_sb737")
}, {
"duration": 1.0,
"texture": ExtResource("3_leqb2")
}, {
"duration": 1.0,
"texture": ExtResource("4_ec5k7")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lpsqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wuga2")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("12_wuga2")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vwx2a"]
radius = 4.0

[sub_resource type="Gradient" id="Gradient_4n0ys"]
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_sb737"]
frequency = 0.0217

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vwx2a"]
width = 2
height = 3
noise = SubResource("FastNoiseLite_sb737")
color_ramp = SubResource("Gradient_4n0ys")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08fjk"]
size = Vector2(10, 10.25)

[node name="Worker" type="Area2D"]
scale = Vector2(5, 5)
script = ExtResource("1_4n0ys")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="FaceSprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p56th")
animation = &"death"

[node name="NearMissSprites" type="AnimatedSprite2D" parent="."]
position = Vector2(5.999999, -7.499998)
scale = Vector2(0.99999976, 0.99999976)
sprite_frames = SubResource("SpriteFrames_lpsqr")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.07)
shape = SubResource("CircleShape2D_vwx2a")

[node name="WorkerParticle" type="CPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.39215687)
amount = 4
texture = SubResource("NoiseTexture2D_vwx2a")
explosiveness = 0.25
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 6.0
gravity = Vector2(0, 1960)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
scale_amount_min = 2.0
scale_amount_max = 5.0
script = ExtResource("3_sb737")

[node name="DeathTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ec5k7")
volume_db = -20.0

[node name="Point" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b78ny")
volume_db = -10.0

[node name="NearMiss" type="Area2D" parent="."]

[node name="NearMissBox" type="CollisionShape2D" parent="NearMiss"]
position = Vector2(0, -1.375)
shape = SubResource("RectangleShape2D_08fjk")
debug_color = Color(0.6369921, 0.5267669, 9.62615e-07, 0.41960785)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="area_entered" from="NearMiss" to="." method="_on_near_miss_area_entered"]
